// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxx4uif {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--colors-primary500);
  cursor: pointer;
  font-family: var(--fonts-sans);
  text-decoration: none;
}

.sxx4uif:focus,
.sxx4uif:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxx4uif:active {
  color: var(--colors-primary500);
}

.sxx4uif5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

<div>
  <a
    class="sxx4uif sxx4uif5dbgn--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxx4uif {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--colors-primary500);
  cursor: pointer;
  font-family: var(--fonts-sans);
  text-decoration: none;
}

.sxx4uif:focus,
.sxx4uif:hover {
  color: var(--colors-primary900);
  text-decoration: underline;
}

.sxx4uif:active {
  color: var(--colors-primary500);
}

.sxx4uif5dbgn--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxx4uifn3mo2--size-lg {
  font-size: var(--fontSizes-lg);
  line-height: 1.52;
}

<div>
  <a
    class="sxx4uif sxx4uifn3mo2--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
